# Social-Gaming-Platform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
express-test/: CMakeLists.txt  ExpressionVisitorTests.cpp
lib/: CMakeLists.txt  player_storage.cpp  player_storage.h  room.cpp  unique_id.cpp  unique_id.h  unique_id_builder.cpp  unique_id_builder.h
lib/InputOutput/: CMakeLists.txt
lib/InputOutput/Input/: CMakeLists.txt
lib/InputOutput/Input/ActionHandler/: CMakeLists.txt
lib/InputOutput/Input/MessageProcessor/: CMakeLists.txt  MessageProcessor.cpp  ServerMessageProcessor.cpp
lib/InputOutput/Input/include/: ServerActionHandler.h
lib/InputOutput/Output/: CMakeLists.txt
lib/InputOutput/Output/ActionHandler/include/: ActionHandler.h
lib/InputOutput/Output/ActionHandler/src/: ActionHandler.cpp
lib/InputOutput/Output/MessageProcessor/include/: ClientMessageProcessor.h  MessageProcessor.h
lib/InputOutput/Output/MessageProcessor/src/: ClientMessageProcessor.cpp  MessageProcessor.cpp
lib/InputOutput/Output/include/: ClientActionHandler.h  ClientMessageProcessor.h
lib/InputOutput/Output/src/: ClientActionHandler.cpp  ClientMessageProcessor.cpp
lib/Responses/: CMakeLists.txt  Response.h
lib/expr-parser-prototype/: CMakeLists.txt  bliniFlexSpec.l  bliniGrammerSpec.y  driver.cpp
lib/expr-parser-prototype/include/: bliniAST.h  bliniExpressionParser.h  expressionVisitor.h  prettyPrintASTVisitor.h
lib/gameLogic/: CMakeLists.txt  GameObject.cpp  Makefile  Player.cpp  Player.h  business_logic_interface.h  gameRules.cpp  player_storage.cpp  room.cpp  symbol_table.cpp  symbol_table.h  unique_id.cpp
lib/gameLogic/drivers/: fix-policy-bug.cpp
lib/gameLogic/include/: ConfigDecorator.h  GameObject.h  ListObject.h  Player.h  PlayerStorage.h  Room.h  RoomConfig.h  RoomPolicy.h  Rules.h  UniqueId.h  gameLogic.h  gameRules.h  player_storage.h  room.h  unique_id.h  unique_id_builder.h
lib/gameLogic/includes/: GameObject.h  Player.h  PlayerStorage.h  Room.h  UniqueId.h  gameLogic.h  gameRules.h  player_storage.h  room.h  unique_id.h  unique_id_builder.h
lib/gameLogic/src/: GameObject.cpp  ListObject.cpp  Player.cpp  PlayerStorage.cpp  Room.cpp  RoomConfig.cpp  Rules.cpp  UniqueId.cpp  gameLogic.cpp  gameRules.cpp  player_storage.cpp  room.cpp  symbol_table.cpp  unique_id.cpp  unique_id_builder.cpp
lib/gameLogic/tests/: CMakeLists.txt  RoomUnitTests.cpp  TestPlayerStorage.cpp  gameRules-unit-tests.cpp  player-unit-tests.cpp  room-unit-tests.cpp  uniqueId-unit-tests.cpp
lib/handler/: CMakeLists.txt  Makefile
lib/handler/include/: controller.h  handler.h
lib/handler/include/classes/: Constants.h  Item.h  PerAudience.h  PerPlayer.h  StrongAlias.h  configuration.h  variables.h
lib/handler/src/: controller.cpp  handler.cpp  handlerHelper.cpp  main.cpp
lib/handler/src/classes/: Constants.cpp  Item.cpp  PerAudience.cpp  PerPlayer.cpp  configuration.cpp  variables.cpp
lib/handler/test/: CMakeLists.txt  Makefile  exampleTests.cpp
lib/messageProcessing/: CMakeLists.txt
lib/messageProcessing/MessageProcessor/: CMakeLists.txt
lib/networking/: CMakeLists.txt  Makefile
lib/networking/include/: Client.h  Logic.h  NetworkMessage.h  NetworkingHelper.h  Server.h  client.h
lib/networking/includeAPPLE/: NetworkMessage.h  NetworkingHelper.h  Server.h
lib/networking/src/: Client.cpp  Logic.cpp  NetworkingHelper.cpp  Server.cpp
lib/ruleProcessing/: CMakeLists.txt
lib/ruleProcessing/ruleHandler/: CMakeLists.txt
lib/ruleProcessing/ruleProcessor/: CMakeLists.txt
lib/rules/: CMakeLists.txt  driver.cpp
lib/rules/include/: InterpreterStack.h  RuleInterface.h  RuleIter.h  Rules.h  RulesLogic.h  SignalData.hpp  ruuuulllle.hpp
lib/rules/src/: Rules.cpp
lib/tokenizer-prototype/: CMakeLists.txt  bliniFlexSpec.l  driver.cpp
lib/tokenizer-prototype/include/: bliniLexer.h  tokenDefinitions.h
test/: CMakeLists.txt  ListObjectUnitTests.cpp  RoomUnitTests.cpp  RulesUnitTest.cpp  controllerTests.cpp  gameObject-unit-tests  handlerTests.cpp  messageProcessorTests.cpp  rulesUnitTests.cpp
test/gameLogic/: CMakeLists.txt  uniqueId-unit-tests.cpp
test/handler/: CMakeLists.txt  rock-paper-scissor.json
test/messageProcessing/: CMakeLists.txt
test/messageProcessing/MessageProcessor/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt
tools/terminalClient/: CMakeLists.txt  Makefile  clientWindow.cpp  clientWindow.h  terminalClient.cpp  test.json
tools/terminalClient/ActionHandler/: CMakeLists.txt
tools/terminalClient/ActionHandler/include/: ActionHandler.h
tools/terminalClient/ActionHandler/src/: ActionHandler.cpp
tools/terminalClient/MessageProcessor/: CMakeLists.txt
tools/terminalClient/MessageProcessor/include/: MessageProcessor.h
tools/terminalClient/MessageProcessor/src/: MessageProcessor.cpp
tools/terminalClient/MessageProcessor/test/: CMakeLists.txt
tools/terminalClient/include/: clientHelper.h
tools/terminalClient/src/: clientHelper.cpp  terminalClient.cpp
tools/terminalServer/: CMakeLists.txt  Makefile  terminalServer.cpp  webchat.html
tools/terminalServer/ActionHandler/: CMakeLists.txt
tools/terminalServer/ActionHandler/include/: ActionHandler.h
tools/terminalServer/ActionHandler/src/: ActionHandler.cpp
tools/terminalServer/Actions/: CMakeLists.txt
tools/terminalServer/Actions/include/: ServerActions.h
tools/terminalServer/MessageProcessor/: CMakeLists.txt
tools/terminalServer/MessageProcessor/include/: MessageProcessor.h  MessageProcessor_pi.h
tools/terminalServer/MessageProcessor/src/: MessageProcessor.cpp
tools/terminalServer/MessageProcessor/test/: test.cpp
tools/terminalServer/ServerActions/: CMakeLists.txt  Makefile
tools/terminalServer/ServerActions/include/: ServerActions.h  ServerActions_pi.h
tools/terminalServer/ServerActions/src/: ServerActions.cpp
tools/terminalServer/ServerActions/test/: Makefile  test.cpp
tools/terminalServer/include/: serverActions.h  terminalServer.h
tools/terminalServer/src/: serverActions.cpp  terminalServer.cpp
tools/terminalServer/test/: CMakeLists.txt  test.cpp
(+9 files in other folders)
